--- a/frontend/src/Cms/ListElement/ListElement.scss
+++ b/frontend/src/Cms/ListElement/ListElement.scss
@@ -53,9 +53,11 @@
 
     h3 {
       margin: 0 0 20px;
-      font-size: 24px;
-      color: $color-primary;
       padding-right: 180px;
+      font-size: 24px;
+      line-height: 32px;
+      color: $color-primary;
+      word-break: break-all;
     }
 
     h6 {
