--- a/frontend/src/variables.scss
+++ b/frontend/src/variables.scss
@@ -4,7 +4,7 @@
 // WHO MAPS specific variables
 
 $page-min-width:         1140px;
-$page-max-width:         1280px;
+$page-max-width:         1440px;
 
 $navigation-width:       280px;
 
